@@ -84,6 +84,7 @@ public class CommandLineOptions {
 		"  --update              download the latest version of Chunky and exit\n" +
 		"  --nolauncher          start Chunky as normal, but without opening launcher\n" +
 		"  --launcher            forces the launcher window to be displayed\n" +
+		"  --version             print the launcher version and exit\n" +
 		"  --verbose             verbose logging in the launcher\n";
 
 	protected boolean confError = false;
